# pysyte

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  CONTRIBUTING.txt  LICENSE  README.md  README.rst  fred.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
devops/test/: requirements.test
dotsite/: __init__.py  debuggers.py  decorated_main.py  decorators.py  decorators_test.py  dictionaries.py  dictionaries.test  dictionaries_test.py  getch.py  imports.py  iteration.py  keyboard.py  linux.py  lists.py  literals.py  main.py  paths.py  paths.test  platform.py  platforms.py  pp.py  scripts.py  splits.py  streams.py  streams.test  term.py  test_dictionaries.py  test_splits.py  text_streams.py  wwm.py
dotsite/test/: test_decorators.py  test_dictionaries.py  test_imports.py  test_literals.py  test_paths.py  test_splits.py  test_streams.py  test_term.py
pysyte/: __init__.py  args.py  args.test  cmnds.py  code.py  darwin.py  debuggers.py  decorators.py  dictionaries.py  dictionaries.test  getch.py  importers.py  imports.py  iteration.py  keyboard.py  lists.py  literals.py  os.py  paths.py  paths.test  platforms.py  pysyte.yaml  randoms.py  scripts.py  similarities.py  similarities.test  splits.py  streams.py  streams.test  term.py  text_streams.py  textual.py  tracebacks.py  words.py  words.test  words.tests
pysyte/ai/: __init__.py  __main__.py  apis.py  open_ai.py  open_ai.toml
pysyte/arguments/: __init__.py  args.py  args.test  arguments.py
pysyte/bash/: cmnds.py  cmnds.test  git.py  git.test  screen.py  shell.py  shell.test
pysyte/bash/test/: shell.test  test_screen.py  test_shell.py
pysyte/cli/: __init__.py  app.py  args.py  arguments.py  arguments.test  config.py  config.test  exceptions.py  exits.py  functions.py  kat.py  lines.py  main.py  paths.py  streams.py
pysyte/cli/test/: arguments.test  config.test  main.test  test_arguments.py  test_cli_configs.py  test_cli_lines.py  test_cli_paths.py
pysyte/colours/: ansi_escapes.py  ansi_escapes.test  colour_names.py  colour_names.test  colour_numbers.py  colour_numbers.test  colour_numbers.tests  main.py  texts.py  texts.test  texts.tests  x11_colour_names.py  x11_colour_names.test  x11_colour_names.tests
pysyte/colours/test/: colour_names.test  colour_numbers.test  colour_numbers.tests  test_ansi_escapes.py  texts.test  x11_colour_names.test  x11_colour_names.tests
pysyte/config/: fred.yamly  types.py  types.test  urator.py  urator.test  xdg.py  xdg.test
pysyte/config/test/: urator.test  xdg.test
pysyte/devops/: requirements.py
pysyte/freds/: __main__.py  freds.py
pysyte/imports/: __main__.py
pysyte/kat/: __main__.py
pysyte/keys/: __main__.py
pysyte/net/: hosts.py  hosts.test
pysyte/net/test/: hosts.test
pysyte/oss/: darwin.py  getch.py  keyboard.py  linux.py  linux.test  platforms.py  platforms.test
pysyte/oss/test/: linux.test  platforms.test
pysyte/prototypes/: git_pull.py  verbs.py  verbs.test
pysyte/test/: importers.test  imports.test  iteration.test  similarities.test  splits.test  streams.test  test_args.py  test_decorators.py  test_dictionaries.py  test_importers.py  test_imports.py  test_literals.py  test_paths.py  test_randoms.py  test_splits.py  test_streams.py  test_term.py  textual.test  tracebacks.test  words.test  words.tests
pysyte/testing/: files_for_test.py  files_for_test.test  files_for_test.tests  see.py  see.test  see.tests  try.py  try.tests  try_plugins.py  try_plugins.test  trying.py  trying.test  trying.tests
pysyte/types/: colours.py  dictionaries.py  dictionaries.test  file_types.py  lines.py  lines.test  lists.py  lists.test  literals.py  methods.py  numbers.py  numbers.test  paths.py  paths.test  proxies.py  python.py  python.test  servers.py  sources.py  strings.py  times.py  times.test
pysyte/types/lists/: __init__.py  search.py
pysyte/types/literals/: ansi.py  ansi.test  control.py  digits.py  nones.py  numbers.py  punctuation.py  punctuation.test
pysyte/types/numbers/: __init__.py  lots.py
pysyte/types/test/: dictionaries.test  lines.test  numbers.test  paths.test  proxies.test  sources.test  test_dictionaries.py  test_lines.py  test_lists.py  test_literals.py  test_methods.py  test_paths.py  test_strings.py  times.test
pysyte/unix/: root.md  root.py  root.txt  root.yaml
requirements/: development.txt  devops.txt  freeze.txt  linting.txt  requirements.txt  testing.txt
(+17 files in other folders)
