[metadata]

name = "pysyte"
version = 0.7.44

description =
    syte packages for a local python
description-file = README.md

license =
    MIT License
platforms =
    any

url =
    https://github.com/jalanb/pysyte
download_url =
    https://github.com/jalanb/pysyte/tarball/v0.7.44

author =
    jalanb
author_email =
    pysyte@al-got-rhythm.net

classifiers =
    Programming Language :: Python :: 3.8
    Development Status :: 4 - Beta
    Natural Language :: English
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Build Tools

install_requires =
    boltons
    deprecated
    inflect<3.0.0
    path.py==7.7.1
    pyyaml
    sh
    stackprinter

test_requires =
    codecov
    coverage
    pytest
    pytest-cov
lint_requires =
    black
    flake8
    pylint
devops_requires =
    bumpversion
dev_requires = 
    ipython
    pprintpp
    pudb
    pylint
    sh

scripts =
    bin/kat
    bin/getkey
    bin/short_dir
    bin/imports
    bin/rePATH
    bin/std

description-file = README.md

[flake8]
# E731 - don't use lambdas
ignore = E731
