[metadata]
name = pysyte
version = v0.7.66
description = Pysyte extends Python
long_description =
    Pysyte extends Python
    Available on github and pypi for ease of access
url = https://github.com/jalanb/pysyte
license = MIT License
author = jalanb
author_email = github@al-got-rhythm.net
platforms = any
classifiers =
    Programming Language :: Python :: 3.9
    Development Status :: 4 - Beta
    Natural Language :: English
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
install_requires =
    boltons
    deprecated
    inflect>=2,<3
    path.py==7.7.1
    pyyaml
    stackprinter
    yamlreader
tests_require =
    pytest
    coverage
    pytest-cov
    tox
scripts =
    bin/kat
    bin/keys
    bin/short_dir
    bin/imports
    bin/rePATH
    bin/std

description-file = README.md
stuff = 43

[flake8]
max-line-length = 88
# E731 - don't use lambdas
# E203, W503: https://black.readthedocs.io/en/stable/compatible_configs.html
ignore = E731, E203, W503
per-file-ignores =
    pysyte/test/test_imports.py:F401

[coverage:run]
omit = */test/*

[coverage:report]
exclude_also =
    ; Don't complain if non-runnable code isn't run:
    if __name__ == "__main__":

    ; Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError
